--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -6,28 +6,30 @@
 
 body {
     background-color: bisque;
-    font-family: Arial, Helvetica, sans-serif;
-    margin: 0;
+    font-family:'Courier New', Courier, monospace;
 }
 
 header {
-    color: black;
+    padding: 20px;
+    background-color: lightpink;
+    color: mediumslateblue;
+}
+
+h1 {
+    font-size: 400%;
+    font-style: oblique;
+    display: inline-block;
 }
 
 nav {
     float: right;
-    font-size: 40px;
+    font-size: 20px;
+    margin-right: 20px;
+    margin-top: 50px;
 }
 
 nav ul li {
     display: inline-block;
-    margin-left: 30px;
-}
-
-.profile img {
-    position: relative;
-}
-
-.work img {
-    position: relative;
+    margin-left: 20px;
+    padding-bottom: 70px;
 }
