--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -61,20 +61,23 @@ p {
     border-radius: 10%;
 }
 
-.work {
+.my-work {
     display: flex;
-    padding-bottom: 50px;
 }
 
-.work img {
+.flex-container {
     display: flex;
+    flex-wrap: wrap;
+    flex-direction: row;
+    justify-content: center;
+    flex: 0 0 0 1;
+    padding: 20px;
+}
+
+.work-items img {
+    display: flex;
+    border-radius: 20%;
+    border: 15px solid pink;
     width: 60%;
-    border-radius: 20%;
-    margin: 10px;
-}
-
-.works img {
-    width: 20%;
-    border-radius: 20%;
     margin: 10px;
 }
