--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -81,3 +81,14 @@ p {
     width: 60%;
     margin: 10px;
 }
+
+.contact {
+    display: flex;
+    width: 100%;
+    font-size: 100%;
+}
+
+.contact p {
+    font-size: 150%;
+    margin-top: 15px;
+}
