--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -86,9 +86,12 @@ p {
     display: flex;
     width: 100%;
     font-size: 100%;
+    padding: 15px;
+    background-color: lightpink;
 }
 
 .contact p {
     font-size: 150%;
+    font-style: oblique;
     margin-top: 15px;
 }
