--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -51,7 +51,7 @@ h2 {
     font-size: 200%;
     color: mediumslateblue;
     margin: 10px 10px 10px;
-    padding: 30px;
+    padding: 10px;
     display: inline-block;
     border-bottom: 5px solid magenta;
     flex-wrap: wrap;
@@ -72,6 +72,7 @@ p {
     float: left;
     margin: 10px;
     border-radius: 10%;
+    padding: 10px;
 }
 
 .my-work {
@@ -81,17 +82,25 @@ p {
 .flex-container {
     display: flex;
     flex-wrap: wrap;
-    flex-direction: row;
+    flex-direction: column;
     justify-content: center;
     flex: 0 0 0 1;
     padding: 20px;
+}
+
+.work-items-done img {
+    display: flex;
+    border-radius: 20%;
+    border: 15px solid pink;
+    width: 60%;
+    margin: 10px;
 }
 
 .work-items img {
     display: flex;
     border-radius: 20%;
     border: 15px solid pink;
-    width: 60%;
+    width: 30%;
     margin: 10px;
 }
 
